--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,15 @@
 
 /*! minireset.css v0.0.6 | MIT License */ html,body,p,ol,ul,li,dl,dt,dd,blockquote,figure,fieldset,legend,textarea,pre,iframe,hr,h1,h2,h3,h4,h5,h6{margin:0;padding:0}h1,h2,h3,h4,h5,h6{font-size:100%;font-weight:normal}ul{list-style:none}button,input,select,textarea{margin:0}html{box-sizing:border-box}*,*::before,*::after{box-sizing:inherit}img,video{height:auto;max-width:100%}iframe{border:0}table{border-collapse:collapse;border-spacing:0}td,th{padding:0}td:not([align]),th:not([align]){text-align:left}
 
+@font-face {
+  font-family: 'impactregular';
+  src: url('unicode.impact-webfont.woff2') format('woff2'),
+       url('unicode.impact-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+
+}
+
 :root {
 
   /* body font size */
@@ -125,8 +134,9 @@ main {
 }
 
 .section {
-  background:#fff;
+  background:#ffffff;
   box-shadow: 3px 3px 2px 1px rgba(111, 111, 111, .2);
+  border-radius: 10px;
   padding:2rem;
   margin-bottom:2rem;
 }
@@ -152,60 +162,67 @@ a {
 /* Typography */
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'Enriqueta', serif;
-  font-weight:400;
+  font-family: 'impactregular',sans-serif;
   line-height:1;
 }
 
 /* text styles*/
 h1 {
-  font-family : var(--secondary-font);
   font-size : 40px;
   line-height: 54px;
-  letter-spacing : 0em;
+  letter-spacing : 0.05em;
 }
 h2 {
-  font-family : var(--secondary-font);
   font-size : 32px;
   line-height: 44px;
-  letter-spacing : 0em;
+  letter-spacing : 0.05em;
 }
 h3 {
-  font-family : var(--secondary-font);
   font-size : 28px;
   line-height: 38px;
-  letter-spacing : 0em;
+  letter-spacing : 0.05em;
 }
 h4 {
-  font-family : var(--secondary-font);
   font-size : 24px;
   line-height: 32px;
-  letter-spacing : 0em;
+  letter-spacing : 0.05em;
 }
 h5 {
-  font-family : var(--secondary-font);
   font-size : 20px;
   line-height: 28px;
-  letter-spacing : 0em;
+  letter-spacing : 0.05em;
 }
+
 h6 {
-  font-family : var(--secondary-font);
   font-size : 16px;
   line-height: 22px;
-  letter-spacing : 0em;
+  letter-spacing : 0.05em;
 }
-.body-text {
-  font-family : var(--primary-font);
+
+.sub-heading {
+  font-family : var(--secondary-font);
   font-size : 16px;
   line-height: 24px;
   letter-spacing : 0em;
+  font-weight:500;
+  color:#000000;
+}
+.body-text {
+  font-family : var(--primary-font);
+  font-size : 14px;
+  line-height: 24px;
+  letter-spacing : 0.05em;
+  color:#000000;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 .image-caption {
   font-family : var(--secondary-font);
   font-size : 12px;
   line-height: auto;
-  letter-spacing : 0em;
+  letter-spacing : 0.05em;
   text-transform: uppercase;
+  color:#929292;
 }
 .pull-quote {
   font-family : var(--secondary-font);
@@ -215,16 +232,16 @@ h6 {
 }
 
 p, li {
-  font-size: 1rem;
-  line-height: 1.5;
-  margin-top:var(--space-md);
-  margin-bottom:var(--space-md);
-  color:var(--text-color);
+  font-family : var(--primary-font);
+  font-size : 14px;
+  line-height: 24px;
+
 }
 
 .section-label {
+  font-family : var(--primary-font);
   text-transform: uppercase;
-  font-weight:400;
+  font-weight:600;
 }
 
 .section-break {
@@ -239,6 +256,12 @@ p, li {
 
 .title {
   font-style: italic;
+}
+
+.square1 {
+  background-color:#F3B6D2;
+  margin: 10px;
+  opacity: 50%;
 }
 
 /* Color samples */
@@ -285,9 +308,11 @@ p, li {
 
 .primary-hue {
   display: flex;
-  padding:3rem 1rem;
+  border-radius: 10px;
+  padding:1rem;
   color:#ffffff;
-  font-family: 'Open Sans';
+  font-size: 14px;
+  font-family: var(--primary-font);
 }
 
 .primary-hue > div {
@@ -296,9 +321,11 @@ p, li {
 
 .secondary-hue {
   display: flex;
-  padding:1.5rem 1rem;
+  border-radius: 10px;
+  padding: 1rem;
   color:#ffffff;
-  font-family: 'Open Sans';
+  font-size: 14px;
+  font-family: var(--primary-font);
 }
 
 .secondary-hue > div {
@@ -307,9 +334,11 @@ p, li {
 
 .neutral-hue {
   display: flex;
-  padding:1.5rem 1rem;
+  border-radius: 10px;
+  padding: 1rem;
   color:#ffffff;
-  font-family: 'Open Sans';
+  font-size: 14px;
+  font-family: var(--primary-font);
 }
 
 .neutral-hue > div {
@@ -318,9 +347,11 @@ p, li {
 
 .accent-hue {
   display: flex;
-  padding:.5rem 1rem;
+  border-radius: 10px;
+  padding: 1rem;
   color:#ffffff;
-  font-family: 'Open Sans';
+  font-size: 14px;
+  font-family: var(--primary-font);
 }
 
 .accent-hue > div {
@@ -331,21 +362,245 @@ p, li {
   color:var(--text-color);
 }
 
-
-
-
-
-img {
+.img {
   width:100%;
 }
 
 
+.row {
+  position: relative;
+  width: 100%;
+}
 
+.row [class^="col"] {
+  float: left;
+  margin: 0% 0%;
+}
 
+.col-2 {
+  width: 16.67%;
+}
 
+.col-8 {
+  width: 66.66%;
+}
 
+.row > div{
+  position:relative;
+}
 
+.row::after {
+content: "";
+display: table;
+clear: both;
+}
 
+.navPanel {
+  background-color:#FFFFFF;
+  box-shadow: 3px 3px 2px 1px rgba(111, 111, 111, .2);
+  border-radius: 10px;
+  border-color: #CFCFCF;
+  border-style: solid;
+  border-width: 0.1px;
+  padding: 5px;
+  margin: 20px auto 0 auto;
+}
 
+/* LOGO */
+.logo {
+  padding: 5px 10px;
+}
 
+/* DESKTOP/TABLET NAVIGATION */
+.float_center {
+  float: right;
+  position: relative;
+  left: -50%; 
+  text-align: left;
+}
 
+.float_center > .child {
+  position: relative;
+  left: 50%;
+}
+
+.clear {
+  clear:both;
+}
+
+ul {
+  list-style-type: none;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display:block;
+  text-align: center;
+  text-decoration: none;
+  padding: 5px 10px;
+}
+
+li a:hover {
+  color: var(--RAC-brand-pink);
+  text-decoration: none;
+}
+
+button {
+  display: block;
+  width: 95%;
+  height: 90%;
+  text-decoration: none;
+  font-family: var(--primary-font);
+  font-size: 16px;
+  line-height: 24px;
+  text-align: center;
+  background-color: #FFFFFF;
+  color: #DD3782;
+  border: 0.5px solid #DD3782;
+  border-radius: 5px;
+  cursor: pointer;
+  padding: 5px 10px;
+}
+
+button:hover{
+  background-color: #DD3782;
+  color: #FFFFFF;
+}
+
+/* MOBILE NAVIGATION */
+.mobileNavigation {
+position: relative;
+right:100%;
+width:50%;
+height:100%;
+z-index:1;
+background-color: #FFFFFF;
+}
+
+.mobileNavigation ul {
+display: none;
+}
+
+.mobileNavigation ul li {
+margin-bottom: 10px;
+padding: 5px 10px;
+}
+
+.mobileMenuButton {
+display: block;
+color: #000000;
+font-size: 18px;
+padding: 5px 10px;
+}
+
+.mobileExit {
+position: relative;
+color: #000000;
+font-size: 18px;
+display:none;
+padding: 5px 10px;
+}
+
+.mobileMenuButton:hover, .mobileExit:hover {
+color: #DD3782;
+}
+
+.button1 {
+  width: 16.67%;
+  text-decoration: none;
+  font-family: var(--primary-font);
+  font-size: 16px;
+  line-height: 24px;
+  text-align: center;
+  background-color: #DD3782;
+  border: 0.5px solid #DD3782;
+  color: #FFFFFF;
+  border-radius: 5px;
+  cursor: pointer;
+  padding: 5px 10px;
+}
+
+.button1:hover{
+  background-color: #F3B6D2;
+  border: 0.5px solid #F3B6D2;
+  color: #000000;
+}
+
+.button2 {
+  width: 16.67%;
+  text-decoration: none;
+  font-family: var(--primary-font);
+  font-size: 16px;
+  line-height: 24px;
+  text-align: center;
+  background-color: #FFCB05;
+  border: 0.5px solid #FFCB05;
+  color: #000000;
+  border-radius: 5px;
+  cursor: pointer;
+  padding: 5px 10px;
+}
+
+.button2:hover{
+  background-color: #7F6503;
+  border: 0.5px solid #7F6503;
+  color: #FFFFFF;
+}
+
+.button3 {
+  width: 16.67%;
+  text-decoration: none;
+  font-family: var(--primary-font);
+  font-size: 16px;
+  line-height: 24px;
+  text-align: center;
+  background-color: #CFCFCF;
+  border: 0.5px solid #CFCFCF;
+  color: #000000;
+  border-radius: 5px;
+  cursor: pointer;
+  padding: 5px 10px;
+}
+
+.button3:hover{
+  background-color: #CFCFCF;
+  border: 0.5px solid #CFCFCF;
+  color: #000000;
+  cursor: default;
+}
+
+.label1 {
+  font-family: var(--primary-font);
+  font-size: 12px;
+  line-height: 16px;
+  color: #929292;
+}
+
+.text1{
+  display: block;
+  padding: 5px;
+  border: 0.5px solid #CFCFCF;
+  border-radius: 5px;
+  font-family: var(--primary-font);
+  font-size: 14px;
+  line-height: 20px;
+}
+
+.card{
+  width: 50%; 
+  background-color: #FFFFFF; 
+  box-shadow: 3px 3px 2px 1px rgba(111, 111, 111, .2); 
+  border-radius: 10px; 
+  border: 0.5px solid #CFCFCF;
+  padding: 5px 10px;
+}
+
+.pic1{
+  width: 94%;
+  border: 0.5px solid #CFCFCF;
+  border-radius: 10px; 
+  margin: 20px 10px 10px;
+}
